[gd_scene load_steps=10 format=2]

[ext_resource path="res://art/blends/tile/tile_albedo.png" type="Texture" id=1]
[ext_resource path="res://src/props/hex_tile.gd" type="Script" id=2]
[ext_resource path="res://src/shaders/hex_tile.shader" type="Shader" id=3]
[ext_resource path="res://src/shaders/unselectedgray_tile_V4.0.shader" type="Shader" id=4]
[ext_resource path="res://art/blends/test_tile/tile_albedo.png" type="Texture" id=5]

[sub_resource type="ArrayMesh" id=1]
resource_name = "tile"
surfaces/0 = {
"aabb": AABB( -0.866025, 0, -1, 1.73205, 0.279647, 2 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 191, 193, 0, 147, 0, 0, 129, 0, 127, 193, 59, 170, 58, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 191, 63, 0, 147, 0, 0, 130, 0, 127, 193, 59, 170, 58, 216, 179, 93, 191, 0, 0, 0, 0, 255, 255, 255, 190, 129, 0, 0, 0, 0, 129, 0, 127, 193, 59, 85, 57, 216, 179, 93, 191, 0, 0, 0, 0, 255, 255, 255, 190, 193, 0, 147, 0, 0, 129, 0, 127, 193, 59, 85, 57, 215, 179, 93, 191, 0, 0, 0, 0, 1, 0, 0, 63, 129, 0, 0, 0, 0, 129, 0, 127, 193, 59, 0, 56, 215, 179, 93, 191, 0, 0, 0, 0, 1, 0, 0, 63, 129, 0, 0, 0, 0, 129, 0, 127, 193, 59, 0, 56, 215, 179, 93, 191, 0, 0, 0, 0, 1, 0, 0, 63, 193, 0, 109, 0, 0, 129, 0, 127, 193, 59, 0, 56, 46, 189, 187, 51, 0, 0, 0, 0, 0, 0, 128, 63, 193, 0, 109, 0, 0, 129, 0, 127, 193, 59, 85, 53, 46, 189, 187, 51, 0, 0, 0, 0, 0, 0, 128, 63, 193, 0, 109, 0, 0, 129, 0, 127, 193, 59, 85, 53, 46, 189, 187, 51, 0, 0, 0, 0, 0, 0, 128, 63, 63, 0, 109, 0, 0, 129, 0, 127, 193, 59, 85, 53, 216, 179, 93, 63, 0, 0, 0, 0, 253, 255, 255, 62, 63, 0, 109, 0, 0, 129, 0, 127, 193, 59, 85, 49, 216, 179, 93, 63, 0, 0, 0, 0, 253, 255, 255, 62, 63, 0, 109, 0, 0, 129, 0, 127, 193, 59, 85, 49, 216, 179, 93, 63, 0, 0, 0, 0, 253, 255, 255, 62, 127, 0, 0, 0, 0, 129, 0, 127, 193, 59, 85, 49, 216, 179, 93, 63, 0, 0, 0, 0, 253, 255, 255, 190, 63, 0, 147, 0, 0, 129, 0, 127, 193, 59, 0, 60, 216, 179, 93, 63, 0, 0, 0, 0, 253, 255, 255, 190, 127, 0, 0, 0, 0, 129, 0, 127, 193, 59, 0, 0, 0, 0, 0, 0, 112, 217, 110, 62, 0, 0, 128, 191, 193, 0, 147, 0, 0, 129, 0, 127, 114, 59, 170, 58, 0, 0, 0, 0, 112, 217, 110, 62, 0, 0, 128, 191, 208, 81, 172, 0, 76, 91, 44, 127, 230, 58, 251, 49, 0, 0, 0, 0, 112, 217, 110, 62, 0, 0, 128, 191, 208, 81, 172, 0, 0, 91, 88, 127, 230, 58, 251, 49, 0, 0, 0, 0, 112, 217, 110, 62, 0, 0, 128, 191, 48, 81, 172, 0, 0, 91, 88, 127, 230, 58, 251, 49, 0, 0, 0, 0, 112, 217, 110, 62, 0, 0, 128, 191, 48, 81, 172, 0, 180, 91, 44, 127, 230, 58, 251, 49, 0, 0, 0, 0, 112, 217, 110, 62, 0, 0, 128, 191, 63, 0, 147, 0, 0, 129, 0, 127, 114, 59, 170, 58, 216, 179, 93, 191, 112, 217, 110, 62, 255, 255, 255, 190, 129, 0, 0, 0, 0, 129, 0, 127, 114, 59, 85, 57, 216, 179, 93, 191, 112, 217, 110, 62, 255, 255, 255, 190, 129, 0, 0, 0, 0, 129, 0, 127, 114, 59, 85, 57, 216, 179, 93, 191, 112, 217, 110, 62, 255, 255, 255, 190, 159, 81, 0, 0, 76, 91, 44, 127, 230, 58, 111, 53, 216, 179, 93, 191, 112, 217, 110, 62, 255, 255, 255, 190, 193, 0, 147, 0, 0, 129, 0, 127, 114, 59, 85, 57, 216, 179, 93, 191, 112, 217, 110, 62, 255, 255, 255, 190, 208, 81, 172, 0, 76, 91, 44, 127, 230, 58, 111, 53, 215, 179, 93, 191, 112, 217, 110, 62, 1, 0, 0, 63, 129, 0, 0, 0, 0, 129, 0, 127, 114, 59, 0, 56, 215, 179, 93, 191, 112, 217, 110, 62, 1, 0, 0, 63, 159, 81, 0, 0, 76, 91, 212, 127, 230, 58, 225, 55, 215, 179, 93, 191, 112, 217, 110, 62, 1, 0, 0, 63, 159, 81, 0, 0, 76, 91, 44, 127, 230, 58, 225, 55, 215, 179, 93, 191, 112, 217, 110, 62, 1, 0, 0, 63, 193, 0, 109, 0, 0, 129, 0, 127, 114, 59, 0, 56, 215, 179, 93, 191, 112, 217, 110, 62, 1, 0, 0, 63, 193, 0, 109, 0, 0, 129, 0, 127, 114, 59, 0, 56, 215, 179, 93, 191, 112, 217, 110, 62, 1, 0, 0, 63, 208, 81, 84, 0, 76, 91, 212, 127, 230, 58, 225, 55, 46, 189, 187, 51, 112, 217, 110, 62, 0, 0, 128, 63, 193, 0, 109, 0, 0, 129, 0, 127, 114, 59, 85, 53, 46, 189, 187, 51, 112, 217, 110, 62, 0, 0, 128, 63, 208, 81, 84, 0, 76, 91, 212, 127, 230, 58, 41, 57, 46, 189, 187, 51, 112, 217, 110, 62, 0, 0, 128, 63, 208, 81, 84, 0, 0, 91, 168, 127, 230, 58, 41, 57, 46, 189, 187, 51, 112, 217, 110, 62, 0, 0, 128, 63, 48, 81, 84, 0, 0, 91, 168, 127, 230, 58, 41, 57, 46, 189, 187, 51, 112, 217, 110, 62, 0, 0, 128, 63, 48, 81, 84, 0, 180, 91, 212, 127, 230, 58, 41, 57, 46, 189, 187, 51, 112, 217, 110, 62, 0, 0, 128, 63, 63, 0, 109, 0, 0, 129, 0, 127, 114, 59, 85, 53, 46, 189, 187, 51, 112, 217, 110, 62, 0, 0, 128, 63, 63, 0, 109, 0, 0, 129, 0, 127, 114, 59, 85, 53, 216, 179, 93, 63, 112, 217, 110, 62, 253, 255, 255, 62, 48, 81, 84, 0, 180, 91, 212, 127, 230, 58, 98, 58, 216, 179, 93, 63, 112, 217, 110, 62, 253, 255, 255, 62, 63, 0, 109, 0, 0, 129, 0, 127, 114, 59, 85, 49, 216, 179, 93, 63, 112, 217, 110, 62, 253, 255, 255, 62, 97, 81, 0, 0, 180, 91, 212, 127, 230, 58, 98, 58, 216, 179, 93, 63, 112, 217, 110, 62, 253, 255, 255, 62, 127, 0, 0, 0, 0, 129, 0, 127, 114, 59, 85, 49, 216, 179, 93, 63, 112, 217, 110, 62, 253, 255, 255, 190, 48, 81, 172, 0, 180, 91, 44, 127, 230, 58, 91, 40, 216, 179, 93, 63, 112, 217, 110, 62, 253, 255, 255, 190, 63, 0, 147, 0, 0, 130, 0, 127, 114, 59, 0, 60, 216, 179, 93, 63, 112, 217, 110, 62, 253, 255, 255, 190, 97, 81, 0, 0, 180, 91, 44, 127, 230, 58, 155, 59, 216, 179, 93, 63, 112, 217, 110, 62, 253, 255, 255, 190, 97, 81, 0, 0, 180, 91, 212, 127, 230, 58, 155, 59, 216, 179, 93, 63, 112, 217, 110, 62, 253, 255, 255, 190, 127, 0, 0, 0, 0, 129, 0, 127, 114, 59, 0, 0, 64, 205, 115, 48, 226, 45, 143, 62, 97, 146, 116, 191, 208, 81, 172, 0, 0, 91, 88, 127, 30, 59, 251, 49, 64, 205, 115, 48, 226, 45, 143, 62, 97, 146, 116, 191, 0, 126, 0, 0, 193, 0, 147, 127, 125, 58, 214, 57, 64, 205, 115, 48, 226, 45, 143, 62, 97, 146, 116, 191, 0, 127, 0, 0, 193, 0, 147, 127, 125, 58, 214, 57, 64, 205, 115, 48, 226, 45, 143, 62, 97, 146, 116, 191, 48, 81, 172, 0, 0, 91, 88, 127, 30, 59, 251, 49, 46, 206, 83, 191, 226, 45, 143, 62, 96, 146, 244, 190, 159, 81, 0, 0, 76, 91, 212, 127, 30, 59, 111, 53, 46, 206, 83, 191, 226, 45, 143, 62, 96, 146, 244, 190, 159, 81, 0, 0, 76, 91, 44, 127, 30, 59, 111, 53, 46, 206, 83, 191, 226, 45, 143, 62, 96, 146, 244, 190, 208, 81, 172, 0, 76, 91, 44, 127, 30, 59, 111, 53, 46, 206, 83, 191, 226, 45, 143, 62, 96, 146, 244, 190, 208, 81, 172, 0, 0, 91, 88, 127, 30, 59, 111, 53, 46, 206, 83, 191, 226, 45, 143, 62, 96, 146, 244, 190, 0, 126, 0, 0, 193, 0, 147, 127, 125, 58, 171, 52, 46, 206, 83, 191, 226, 45, 143, 62, 96, 146, 244, 190, 0, 127, 0, 0, 193, 0, 147, 127, 125, 58, 171, 52, 45, 206, 83, 191, 226, 45, 143, 62, 99, 146, 244, 62, 159, 81, 0, 0, 76, 91, 212, 127, 30, 59, 225, 55, 45, 206, 83, 191, 226, 45, 143, 62, 99, 146, 244, 62, 208, 81, 84, 0, 76, 91, 212, 127, 30, 59, 225, 55, 45, 206, 83, 191, 226, 45, 143, 62, 99, 146, 244, 62, 208, 81, 84, 0, 0, 91, 168, 127, 30, 59, 225, 55, 45, 206, 83, 191, 226, 45, 143, 62, 99, 146, 244, 62, 0, 126, 0, 0, 193, 0, 147, 127, 234, 54, 170, 44, 45, 206, 83, 191, 226, 45, 143, 62, 99, 146, 244, 62, 0, 127, 0, 0, 193, 0, 147, 127, 234, 54, 170, 44, 67, 67, 181, 51, 226, 45, 143, 62, 97, 146, 116, 63, 208, 81, 84, 0, 0, 91, 168, 127, 30, 59, 41, 57, 67, 67, 181, 51, 226, 45, 143, 62, 97, 146, 116, 63, 0, 126, 0, 0, 193, 0, 147, 127, 207, 42, 171, 52, 67, 67, 181, 51, 226, 45, 143, 62, 97, 146, 116, 63, 48, 81, 84, 0, 0, 91, 168, 127, 30, 59, 41, 57, 46, 206, 83, 63, 226, 45, 143, 62, 94, 146, 244, 62, 0, 126, 0, 0, 193, 0, 147, 127, 207, 42, 214, 57, 46, 206, 83, 63, 226, 45, 143, 62, 94, 146, 244, 62, 0, 127, 0, 0, 193, 0, 147, 127, 207, 42, 214, 57, 46, 206, 83, 63, 226, 45, 143, 62, 94, 146, 244, 62, 48, 81, 84, 0, 0, 91, 168, 127, 30, 59, 98, 58, 46, 206, 83, 63, 226, 45, 143, 62, 94, 146, 244, 62, 48, 81, 84, 0, 180, 91, 212, 127, 30, 59, 98, 58, 46, 206, 83, 63, 226, 45, 143, 62, 94, 146, 244, 62, 97, 81, 0, 0, 180, 91, 44, 127, 30, 59, 98, 58, 46, 206, 83, 63, 226, 45, 143, 62, 94, 146, 244, 62, 97, 81, 0, 0, 180, 91, 212, 127, 30, 59, 98, 58, 46, 206, 83, 63, 226, 45, 143, 62, 94, 146, 244, 190, 0, 127, 0, 0, 193, 0, 147, 127, 234, 54, 150, 59, 46, 206, 83, 63, 226, 45, 143, 62, 94, 146, 244, 190, 0, 127, 0, 0, 193, 0, 147, 127, 234, 54, 150, 59, 46, 206, 83, 63, 226, 45, 143, 62, 94, 146, 244, 190, 48, 81, 172, 0, 0, 91, 88, 127, 30, 59, 91, 40, 46, 206, 83, 63, 226, 45, 143, 62, 94, 146, 244, 190, 48, 81, 172, 0, 180, 91, 44, 127, 30, 59, 91, 40, 46, 206, 83, 63, 226, 45, 143, 62, 94, 146, 244, 190, 97, 81, 0, 0, 180, 91, 44, 127, 30, 59, 155, 59, 0, 0, 0, 0, 226, 45, 143, 62, 86, 85, 213, 50, 0, 126, 0, 0, 193, 0, 147, 127, 234, 54, 21, 56, 0, 0, 0, 0, 226, 45, 143, 62, 86, 85, 213, 50, 0, 127, 0, 0, 193, 0, 147, 127, 234, 54, 21, 56, 0, 0, 0, 0, 226, 45, 143, 62, 86, 85, 213, 50, 0, 127, 0, 0, 193, 0, 147, 127, 234, 54, 21, 56 ),
"array_index_data": PoolByteArray( 14, 0, 12, 0, 42, 0, 7, 0, 6, 0, 29, 0, 3, 0, 0, 0, 15, 0, 1, 0, 13, 0, 44, 0, 11, 0, 9, 0, 38, 0, 4, 0, 2, 0, 21, 0, 46, 0, 41, 0, 71, 0, 33, 0, 31, 0, 59, 0, 17, 0, 48, 0, 55, 0, 19, 0, 43, 0, 75, 0, 35, 0, 65, 0, 68, 0, 28, 0, 23, 0, 53, 0, 64, 0, 77, 0, 66, 0, 57, 0, 78, 0, 62, 0, 67, 0, 79, 0, 73, 0, 61, 0, 77, 0, 64, 0, 49, 0, 77, 0, 56, 0, 72, 0, 78, 0, 50, 0, 14, 0, 42, 0, 47, 0, 8, 0, 30, 0, 32, 0, 3, 0, 15, 0, 24, 0, 1, 0, 44, 0, 20, 0, 10, 0, 37, 0, 40, 0, 5, 0, 22, 0, 26, 0, 45, 0, 70, 0, 76, 0, 34, 0, 60, 0, 63, 0, 16, 0, 54, 0, 25, 0, 18, 0, 74, 0, 51, 0, 36, 0, 69, 0, 39, 0, 27, 0, 52, 0, 58, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 90,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 80
}

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 4 )
shader_param/vertical_height = 0.3
shader_param/alpha = 0.0
shader_param/albedo = Color( 0.564706, 0.564706, 0.564706, 1 )
shader_param/uv1_scale = Vector2( 1, 1 )
shader_param/is_selected = false
shader_param/tile_png = ExtResource( 5 )

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
next_pass = SubResource( 4 )
shader = ExtResource( 3 )
shader_param/albedo = Color( 1, 1, 1, 0 )
shader_param/specular = 0.5
shader_param/metallic = 0.0
shader_param/roughness = 1.0
shader_param/point_size = 0.0
shader_param/uv1_scale = Vector3( 1, 1, 1 )
shader_param/uv1_offset = Vector3( 0, 0, 0 )
shader_param/uv2_scale = Vector3( 1, 1, 1 )
shader_param/uv2_offset = Vector3( 0, 0, 0 )
shader_param/highlight_color = Color( 0.709804, 0.211765, 1, 1 )
shader_param/mix_amount = 0.75
shader_param/is_highlighted = false
shader_param/texture_albedo = ExtResource( 1 )

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( 0.866, 0, -0.5, 0.866, 0, 0.5, 0.866, 0.2333, 0.5, 0, 0, 1, -0.866, 0, 0.5, -0.866, 0.2333, 0.5, -0.866, 0, -0.5, 0, 0, -1, 0, 0.2333, -1, 0, 0, -1, 0.866, 0, -0.5, 0.866, 0.2333, -0.5, 0.866, 0, 0.5, 0, 0, 1, 0, 0.2333, 1, -0.866, 0, 0.5, -0.866, 0, -0.5, -0.866, 0.2333, -0.5, 0.866, 0.2333, -0.5, 0.866, 0.2333, 0.5, 0.8274, 0.2796, 0.4777, 0, 0.2333, 1, -0.866, 0.2333, 0.5, -0.8274, 0.2796, 0.4777, 0, 0.2333, -1, 0, 0.2796, -0.9554, -0.8274, 0.2796, -0.4777, 0, 0.2333, -1, 0.866, 0.2333, -0.5, 0.8274, 0.2796, -0.4777, 0, 0.2333, 1, 0, 0.2796, 0.9554, 0.8274, 0.2796, 0.4777, -0.866, 0.2333, 0.5, -0.866, 0.2333, -0.5, -0.8274, 0.2796, -0.4777, 0, 0.2796, 0.9554, 0, 0.2796, 0, 0.8274, 0.2796, 0.4777, -0.8274, 0.2796, -0.4777, 0, 0.2796, 0, -0.8274, 0.2796, 0.4777, 0.8274, 0.2796, 0.4777, 0, 0.2796, 0, 0.8274, 0.2796, -0.4777, -0.8274, 0.2796, 0.4777, 0, 0.2796, 0, 0, 0.2796, 0.9554, 0, 0.2796, -0.9554, 0, 0.2796, 0, -0.8274, 0.2796, -0.4777, 0.8274, 0.2796, -0.4777, 0, 0.2796, 0, 0, 0.2796, -0.9554, 0.866, 0, -0.5, 0.866, 0.2333, 0.5, 0.866, 0.2333, -0.5, 0, 0, 1, -0.866, 0.2333, 0.5, 0, 0.2333, 1, -0.866, 0, -0.5, 0, 0.2333, -1, -0.866, 0.2333, -0.5, 0, 0, -1, 0.866, 0.2333, -0.5, 0, 0.2333, -1, 0.866, 0, 0.5, 0, 0.2333, 1, 0.866, 0.2333, 0.5, -0.866, 0, 0.5, -0.866, 0.2333, -0.5, -0.866, 0.2333, 0.5, 0.866, 0.2333, -0.5, 0.8274, 0.2796, 0.4777, 0.8274, 0.2796, -0.4777, 0, 0.2333, 1, -0.8274, 0.2796, 0.4777, 0, 0.2796, 0.9554, 0, 0.2333, -1, -0.8274, 0.2796, -0.4777, -0.866, 0.2333, -0.5, 0, 0.2333, -1, 0.8274, 0.2796, -0.4777, 0, 0.2796, -0.9554, 0, 0.2333, 1, 0.8274, 0.2796, 0.4777, 0.866, 0.2333, 0.5, -0.866, 0.2333, 0.5, -0.8274, 0.2796, -0.4777, -0.8274, 0.2796, 0.4777 )

[node name="hex_tile" type="Spatial"]
script = ExtResource( 2 )

[node name="tile" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Area" type="Area" parent="."]
collision_layer = 2

[node name="shape0" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_Area_mouse_exited"]
